--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.13",
     "@mui/styled-engine-sc": "^6.0.0-alpha.1",
-    "firebase": "^9.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@mui/styles": "^5.14.15",
+    "firebase": "^10.5.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "styled-components": "^6.0.9"
   },
   "devDependencies": {
