--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "cors": "^2.8.5",
     "firebase": "^10.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
