--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "firebase": "^10.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
