--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "cors": "^2.8.5",
+    "diagnostics_channel": "^1.1.0",
     "express": "^4.18.2",
     "firebase": "^10.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-social-media-embed": "^2.3.6",
     "styled-components": "^6.0.9"
   },
   "devDependencies": {
